test/fail/errors/DottedVariable.agda
module DottedVariable where

f : Set → Set
f A = .A
